ProcessBuilder instead of exec